--- a/index.html
+++ b/index.html
@@ -28,16 +28,19 @@
       
       <div class="c c3">
 
-        <input  class="box"
-        type="text" placeholder="Search for products,brands and more">
+       <form>
+        <button type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+          <input  class="box"
+          type="text"  placeholder="Search for products,brands and more">
+           </form>
       </div>
       <div class="c c4">
 
         <div>
-          <i class="fa-thin fa-user"></i>
+          <i class="fa-solid fa-user"></i>
           <h5 class="h h1">Profile</h5></div>
-       <div><i class="fa-thin fa-heart"></i> <h5 class="h h2">Wishlist</h5></div>
-       <div><i class="fa-thin fa-bag-shopping"></i> <h5 class="h h3">Bag</h5></div>
+       <div><i class="fa-regular fa-heart"></i> <h5 class="h h2">Wishlist</h5></div>
+       <div><i class="fa-solid fa-bag-shopping"></i> <h5 class="h h3">Bag</h5></div>
 
       </div> 
     </div>
